--- a/Resume.html
+++ b/Resume.html
@@ -64,7 +64,8 @@
 
 
     <div class="card mt-5 text-light" style="max-width: 100;">
-        <div class="card-header mt-5 pt-5 bg-secondary text-center ">
+        <div class="card-header mt-5 pt-5 text-center"
+         style="background-color: whitesmoke; color: dark;">
             <h5 class="text-dark fw-bold">ATUSASIIRE DAREN CARED</h5>
             <h6 class="text-dark fw-bold">Junior Web Developer</h6>
             <p class="text-dark fw-bold">Mobile: 0770987258</p>
