--- a/about.html
+++ b/about.html
@@ -58,7 +58,9 @@
     </nav>
 
 
-    <section class="jumbotron jumbotron-fluid text-center bg-secondary text-white p-2 text-sm-start p-lg-0 pt-5 vh-100">
+    <section 
+    class="jumbotron jumbotron-fluid text-center text-white p-2 text-sm-start p-lg-0 pt-5 vh-100"
+    style="background-color: whitesmoke;">
         <div class="-md-7 pt-1 pb-1 me-3">
              <div class="container text-center mt-5">
                 <h3>
