--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,9 @@
 
 
     <!-- My Projects section -->
-    <section class="bg-secondary vh-100 p-5">
+    <section 
+    class="vh-100 p-5"
+    style="background-color: whitesmoke; color: dark;">
         <div class="container text-center">
             <h3>
                 <span class="text-white fw-bold m-5">My Projects</span>
