--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
 
 
     <section 
-    class="jumbotron jumbotron-fluid text-center text-white p-2 text-sm-start p-lg-0 pt-5 vh-100"
-    style="background-color: whitesmoke;">
+    class="jumbotron jumbotron-fluid text-center p-2 text-sm-start p-lg-0 pt-5 vh-100"
+    style="background-color: whitesmoke; color: dark;">
         <div class="-md-7 pt-1 pb-1 me-3">
              <div class="container text-center mt-5">
                 <h3>
