--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     </nav>
 
 
-    <section class="jumbotron jumbotron-fluid text-center bg-secondary fw-bold text-dark p-5 text-sm-start vh-100"
+    <section class="jumbotron jumbotron-fluid text-center fw-bold text-dark p-5 text-sm-start vh-100"
      style="background-color: whitesmoke; color: dark;">
         <div class="container">
             <div class="container text-center fw-bold display-4 pl-5">
