--- a/about.html
+++ b/about.html
@@ -64,7 +64,10 @@
         <div class="-md-7 pt-1 pb-1 me-3">
              <div class="container text-center mt-5">
                 <h3>
-                    <span class="text-white fw-bold p-5">About Me</span>
+                    <span class="fw-bold p-5"
+                    style="color: black;">
+                        About Me
+                    </span>
                     </h3>
                     </div>
             <div class="container">
