--- a/Resume.html
+++ b/Resume.html
@@ -71,7 +71,8 @@
             <p class="text-dark fw-bold">Mobile: 0770987258</p>
             <p class="text-dark  fw-bold">E-mail: atusasiiredarencared58@gmail.com</p>
         </div>
-        <div class="card-body text-white bg-secondary ps-5">
+        <div class="card-body text-dark ps-5"
+        style="background-color: whitesmoke;">
             <h5 class="text-dark text-decoration-underline">Personal profile</h5>
             <ul>
                 <li>I'm a self-motivated, flexible, friendly and competent person, who is more dedicated to work in all
