--- a/Resume.html
+++ b/Resume.html
@@ -111,7 +111,8 @@
                     <li>2025 : Ongoing certificate in Web development Women in Technology Uganda</li>
                 </ul>
         </div>
-        <div class="card-footer bg-secondary text-white border-success ps-5">
+        <div class="card-footer bg-secondary text-dark border-success ps-5"
+        style="background-color: whitesmoke;">
 
             <h5 class="text-dark text-decoration-underline"><b>Referees</b></h5>
             <p><b>1.</b>Mr Nuwagira Alexander</p>
