--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
         <div class="container">
             <div class="container text-center fw-bold display-4 pl-5">
                 <h3>
-                    <span class="text-white fw-bold">Talk to Me</span>
+                    <span class="text-dark fw-bold">Talk to Me</span>
                 </h3>
 
             </div>
@@ -70,7 +70,8 @@
                     <p class="lead my-4"><span class="fw-bold">Let's work together! Have a project in mind<br> or just
                             want to say hi?<br> I'd
                             love to hear from you.</span></p>
-                    <a href="#" class="link-custom text-white"><span class="text-dark fw-bold">Call</span>:
+                    <a href="#" class="link-custom"><span class="text-dark fw-bold"
+                        style="color: blue;">Call</span>:
                         0770987258</a>
                 </div>
 
