--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
     style="background-color: whitesmoke; color: dark;">
         <div class="container text-center">
             <h3>
-                <span class="text-white fw-bold m-5">My Projects</span>
+                <span class="text-dark fw-bold m-5">My Projects</span>
             </h3>
         </div>
         <div class="container mt-5">
