--- a/Resume.html
+++ b/Resume.html
@@ -114,7 +114,9 @@
         <div class="card-footer bg-secondary text-dark border-success ps-5"
         style="background-color: whitesmoke;">
 
-            <h5 class="text-dark text-decoration-underline"><b>Referees</b></h5>
+            <h5 class="text-dark text-decoration-underline"
+            style="background-color: whitesmoke;">
+            <b>Referees</b></h5>
             <p><b>1.</b>Mr Nuwagira Alexander</p>
             <ul>
                 <li>Head of IT Leading Innovations Ltd</li>
