--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                     <p class="lead my-4"><span class="fw-bold">Let's work together! Have a project in mind<br> or just
                             want to say hi?<br> I'd
                             love to hear from you.</span></p>
-                    <a href="#" class="link-custom"><span class="text-dark fw-bold"
+                    <a href="#" class="link-custom text-decoration-none"><span class="text-dark fw-bold"
                         style="color: blue;">Call</span>:
                         0770987258</a>
                 </div>
