--- a/projects.html
+++ b/projects.html
@@ -66,29 +66,28 @@
         </div>
         <div class="container mt-5">
             <div class="row justify-content-center">
-                <div class="col-md w-75 text-dark mt-5 h-60">
-                    <div style="background-color: whitesmoke; color: black;">
-                        <div class="card-body">
-                            <div>
-                                <img src="./images/BFSCHOOL.jpg" class="card-img-top w-75 mx-auto d-block " alt="image">
-                                <div style="background-color: whitesmoke; color: black;">
-                                    <h5 class="card-title mt-3 text-center"><span class="text-primary">School
-                                            Website</span></h5>
-                                    <p class="card-text">
-                                        I developed a school wbsite that provides easy access to school
-                                        details,
-                                        announcements,academic resources, and contact information
-                                    </p>
+                      <div class="col-md">
+                    <div class="card w-75 text-dark mt-5 h-60">
+                        <div style="background-color: whitesmoke; color: black;">
+                            <img src="./images/BFSCHOOL.jpg" class="card-img-top w-75 mx-auto d-block mt-3" alt="image">
+                            <div class="card-body">
+                                <h5 class="card-title text-center"><span class="text-primary">School
+                                        Website</span></h5>
+                                <p class="card-text">
+                                  I developed a school website that provides easy access to school details, announcements, 
+                                  academic resources, and contact information 
+                                </p>
 
-                                      <a href="BrightFutureSchool/BrightFutureSchool.html" class="btn btn-primary d-block mx-auto">
+                                <a href="" class="btn btn-primary d-block mx-auto">
                                     View Project
                                 </a>
-
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+               
+
+                        
 
 
 
