--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="card-body">
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
-                                <h5 class=" card-title"><span class="text-primary">
+                                <h5 class=" card-title my-5"><span class="text-primary">
                                         Web design and Web development</span></h5>
                                 <p class="card-text text-dark">
                                     I provides services such as website development, which involves building the
@@ -128,7 +128,7 @@
                     <div class="card-body text-center">
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
-                                <h5 class=" card-title"><span class="text-primary">Portfolios</span></h5>
+                                <h5 class=" card-title my-5"><span class="text-primary">Portfolios</span></h5>
                                 <p class="card-text text-dark">
                                     I create custom portfolio that highlight a client's work and
                                     personal brand, combining clean design, responsive layout, and seamless
@@ -145,7 +145,7 @@
                     <div class="card-body">
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
-                                <h5 class=" card-title"><span class="text-primary">Graphics Design</span></h5>
+                                <h5 class=" card-title my-5"><span class="text-primary">Graphics Design</span></h5>
                                 <p class="card-text">
                                     I'm a passionate graphic designer and visual storyteller crafting clean,
                                     impactful visuals, creatig innovative
