--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <p class="card-text text-dark">
                                     I provides services such as website development, which involves building the
                                     full functionality of a site,
-                                    
+                                    and front-end development.
                                 </p>
                             </div>
                         </div>
