--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg  navbar-secondary bg-primary py-1 fixed-top">
-        <div class="container-fluid justify-content-center">
+        <div class="container-fluid ms-5">
             <a class="navbar-brand" href="#">
                 <img src="./images/logo.png" alt="Logo" style="height:90px">
 
