--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg  navbar-light bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="about.html">
+            <a class="navbar-brand ms-5" href="about.html">
                 <img src="./images/logo.png" alt="Logo" style="height:90px">
 
             </a>
