--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg  navbar-light bg-primary">
-        <div class="container-fluid">
+        <div class="container-fluid ms-5">
             <a class="navbar-brand" href="about.html">
                 <img src="./images/logo.png" alt="logo" style="height:90px">
 
