--- a/Resume.html
+++ b/Resume.html
@@ -34,7 +34,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-5 ms-auto">
+                <ul class="navbar-nav mb-2 mb-lg-0 ms-5 ms-auto">
                     <li class="nav-item">
                         <a class="nav-link active text-white" aria-current="page" href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
                     </li>
