--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg  navbar-light bg-primary">
+    <nav class="navbar navbar-expand-lg  navbar-light bg-primary fixed-top">
         <div class="container-fluid ms-5">
             <a class="navbar-brand" href="about.html">
          <img src="./images/logo.png" alt="logo" style="height:90px">
