--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <body>
 
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg  navbar-light bg-primary">
+    <nav class="navbar navbar-expand-lg  navbar-light bg-primary fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand ms-5" href="about.html">
                 <img src="./images/logo.png" alt="Logo" style="height:90px">
