--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         Explore My Projects
                     </a>
                 </div>
-                <img class="img-fluid w-50 img-thumbnail width-100 height-50 d-none d-sm-block rounded-circle shadow style="width: 50px; height: 120px;"
+                <img class="img-fluid w-50 img-thumbnail width-100 height-50 d-none d-sm-block rounded-circle shadow style="width: 80px; height: 100px;"
                     src="./images/daren123-removebg-preview.png" alt="Image">
             </div>
         </div>
@@ -112,7 +112,7 @@
                             <div style="background-color: whitesmoke; color: black;">
                                 <h5 class=" card-title my-2 text-center"><span class="text-primary">
                                         Web design and Web development</span></h5>
-                                <p class="card-text text-dark">
+                                <p class="card-text text-dark pb-2">
                                     I provides services such as website development, which involves building the
                                     full functionality of a site,
                                     and front-end development.
@@ -128,7 +128,7 @@
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
                                 <h5 class=" card-title my-2 text-center"><span class="text-primary">Portfolios</span></h5>
-                                <p class="card-text text-dark">
+                                <p class="card-text text-dark pb-2">
                                     I create custom portfolio that highlight a client's work and
                                     personal brand, combining clean design, responsive layout, and seamless
                                     functionality
@@ -145,7 +145,7 @@
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
                                 <h5 class=" card-title my-2 text-center"><span class="text-primary">Graphics Design</span></h5>
-                                <p class="card-text">
+                                <p class="card-text pb-2">
                                     I'm a passionate graphic designer and visual storyteller crafting clean,
                                     impactful visuals, creatig innovative
                                     design solutions transforming concepts into professional, engaging designs
