--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="card-body text-center">
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
-                                <h5 class=" card-title my-2 text-center"><span class="text-primary">Portfolios</span></h5>
+                                <h5 class=" card-title my-2 ps-2"><span class="text-primary">Portfolios</span></h5>
                                 <p class="card-text text-dark pb-2">
                                     I create custom portfolio that highlight a client's work and
                                     personal brand, combining clean design, responsive layout, and seamless
