--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <div style="background-color: whitesmoke; color: black;">
                                 <h5 class=" card-title my-2 text-center"><span class="text-primary">
                                         Web design and Web development</span></h5>
-                                <p class="card-text text-dark pb-2">
+                                <p class="card-text text-dark pb-2 ps-2">
                                     I provides services such as website development, which involves building the
                                     full functionality of a site,
                                     and front-end development.
@@ -127,8 +127,8 @@
                     <div class="card-body text-center">
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
-                                <h5 class=" card-title my-2 ps-2"><span class="text-primary">Portfolios</span></h5>
-                                <p class="card-text text-dark pb-2">
+                                <h5 class=" card-title my-2 "><span class="text-primary">Portfolios</span></h5>
+                                <p class="card-text text-dark pb-2 ps-2">
                                     I create custom portfolio that highlight a client's work and
                                     personal brand, combining clean design, responsive layout, and seamless
                                     functionality
@@ -145,7 +145,7 @@
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
                                 <h5 class=" card-title my-2 text-center"><span class="text-primary">Graphics Design</span></h5>
-                                <p class="card-text pb-2">
+                                <p class="card-text pb-2 ps-2">
                                     I'm a passionate graphic designer and visual storyteller crafting clean,
                                     impactful visuals, creatig innovative
                                     design solutions transforming concepts into professional, engaging designs
