--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
             </h3>
         </div>
         <div class="container mt-5">
-            <div class="row justify-content-center">
+            <div class="row">
                       <div class="col-md">
                     <div class="card w-75 text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
@@ -73,7 +73,7 @@
                             <div class="card-body">
                                 <h5 class="card-title text-center"><span class="text-primary">School
                                         Website</span></h5>
-                                <p class="card-text">
+                                <p class="card-text ">
                                   I developed a school website that provides easy access to school details, announcements, 
                                   academic resources, and contact information 
                                 </p>
