--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <section>
         <div class="container pt-5">
             <h4 class="text-center text-dark fw-bold ">My Services</h4>
-            <div class="row row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+            <div class="row">
                 <div class="col-md">
                     <div class="card-body">
                         <div class="card" style="width: 18rem;">
