--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <!-- Services section -->
 
-    <section>
+    <section class="vh-100">
         <div class="container pt-5">
             <h4 class="text-center text-dark fw-bold ">My Services</h4>
             <div class="row">
