--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <section class="vh-70 justify-content-between justify-content-center">
         <div class="container pt-5">
-            <h4 class="text-center text-dark fw-bold ">My Services</h4>
+            <h4 class="text-center text-dark fw-bold my-5">My Services</h4>
             <div class="row">
                 <div class="col-md">
                     <div class="card-body">
