--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="container pt-5">
             <h4 class="text-center text-dark fw-bold my-5">My Services</h4>
             <div class="row my-5">
-                <div class="col-md">
+                <div class="col-md my-5">
                     <div class="card-body">
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
