--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
 
 
-                <div class="col-md">
+                <div class="col-md my-5">
                     <div class="card-body text-center">
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
@@ -140,7 +140,7 @@
                 </div>
 
 
-                <div class="col-md">
+                <div class="col-md my-5">
                     <div class="card-body">
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
