--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
                     <div>
                         <h4>Hello, Welcome</h4>
                         <p class="text-white fs-3 fw-bold lead"><span class="text-primary">I'm Atusasiire Daren Cared</span></p>
-                        <p>
+                        <p class="fs-2">
                             <br>I'm a passionate Web designer and developer based in Kampala-Uganda.<br>
                             I create clean and user friendly websites using HTML, CSS and Bootstrap.<br> I love turning
                             ideas into
