--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,7 @@
 
 
                        <div class="col-md">
-                    <div class="card w-75 bg-dark text-dark mt-5 h-60">
+                    <div class="card w-75 text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
                             <img src="./images/portfolio.jpg" class="card-img-top w-75 mx-auto d-block mt-3" alt="image">
                             <div class="card-body">
