--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
 
     <!-- My Projects section -->
     <section 
-    class="vh-100 p-5"
+    class="vh-100 p-5 justify-content-between justify-content-center"
     style="background-color: whitesmoke; color: dark;">
         <div class="container text-center">
             <h3>
