--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            style="background-color: white;"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
