--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
             style="background-color:; "
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                 <span class="navbar-toggler-icon"></span>
-                  <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon color-white"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0  ms-auto">
