--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
             </h3>
         </div>
         <div class="container mt-5">
-            <div class="row">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-0 g-sm-2 g-md-4">
                       <div class="col-md">
                     <div class="card w-75 text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
