--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
                 <span class="text-dark fw-bold m-5">My Projects</span>
             </h3>
         </div>
-        <div class="container mt-5">
+        <div class="container mt-5 row-cols-1 row-cols-sm-2 row-cols-md-3 g-0">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-0">
                       <div class="col-md">
                     <div class="card w-75 text-dark mt-5 h-60">
