--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
     <section 
     class="vh-100 p-5 justify-content-between justify-content-center"
     style="background-color: whitesmoke; color: dark;">
-        <div class="container text-center px-0">
+        <div class="container text-center">
             <h3>
                 <span class="text-dark fw-bold m-5">My Projects</span>
             </h3>
