--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,9 @@
     class="vh-100 p-5 justify-content-between justify-content-center"
     style="background-color: whitesmoke; color: dark;">
         <div class="container text-center">
-           
+           <h3 class="text-dark">
+            My Projects
+           </h3>
         </div>
         <div class="container mt-5 ">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-0">
