--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
     <section 
     class="vh-100 p-5 justify-content-between justify-content-center"
     style="background-color: whitesmoke; color: dark;">
-        <div class="container text-center mt-5">
+        <div class="container text-center py-5">
      <h3 class="text-dark">
             My Projects
            </h3>
