--- a/projects.html
+++ b/projects.html
@@ -59,8 +59,8 @@
     <section 
     class="vh-100 p-5 justify-content-between justify-content-center"
     style="background-color: whitesmoke; color: dark;">
-        <div class="container text-center py-5">
-     <h3 class="text-dark">
+        <div class="container text-center">
+     <h3 class="text-dark py-5">
             My Projects
            </h3>
         </div>
