--- a/projects.html
+++ b/projects.html
@@ -60,9 +60,9 @@
     class="vh-100 p-5 justify-content-between justify-content-center"
     style="background-color: whitesmoke; color: dark;">
         <div class="container text-center">
-     <h3 class="text-dark py-5">
+     <h4 class="text-dark pt-5">
             My Projects
-           </h3>
+           </h4>
         </div>
         <div class="container mt-5 "> 
             <div class="row">
