--- a/projects.html
+++ b/projects.html
@@ -57,15 +57,15 @@
 
     <!-- My Projects section -->
     <section 
-    class="vh-100 p-5 justify-content-between justify-content-center"
+    class="vh-100 p-5"
     style="background-color: whitesmoke; color: dark;">
-        <div class="container text-center ">
+        <div class="container text-center">
             <h3>
                 <span class="text-dark fw-bold m-5">My Projects</span>
             </h3>
         </div>
-        <div class="container mt-5 ">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-0">
+        <div class="container mt-5">
+            <div class="row">
                       <div class="col-md">
                     <div class="card w-75 text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
