--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
                 <img src="./images/logo.png" alt="Logo" style="height:90px">
 
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            style="background-color:; "
+            <button 
+            class="navbar-toggler" 
+            type="button" 
+            data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon color-white"></span>
+                <span class="navbar-toggler-icon" style="color: white;"></span>
         </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
