--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             class="navbar-toggler" 
             type="button" 
             data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+                data-bs-target="#navbar">
                 <span class="navbar-toggler-icon" style="color: white;"></span>
         </button>
 
