--- a/about.html
+++ b/about.html
@@ -59,13 +59,13 @@
 
 
     <section 
-    class="jumbotron jumbotron-fluid text-center p-2 text-sm-start p-lg-0 pt-5 vh-100"
+    class="jumbotron jumbotron-fluid text-center p-2 text-sm-start  p-5 p-lg-0 pt-lg-5 vh-100"
     style="background-color: whitesmoke; color: dark;">
         <div class="-md-7 pt-1 pb-1 me-3">
              <div class="container text-center mt-5">
                 <h3>
-                    <span class="fw-bold p-5"
-                    style="color: black;">
+                    <span class="fw-bold "
+                    style="color: black mt-5;">
                         About Me
                     </span>
                     </h3>
