--- a/projects.html
+++ b/projects.html
@@ -60,12 +60,8 @@
     class="vh-100 p-5"
     style="background-color: whitesmoke; color: dark;">
         <div class="container text-center">
-            <h3>
-                <span class="text-dark fw-bold m-5">My Projects</span>
-            </h3>
-        </div>
-        <div class="container mt-5">
-            <div class="row">
+               <h3 class="text-dark text-center mb-5">My Projects</h3>
+            <div class="row text-center">
                       <div class="col-md">
                     <div class="card w-75 text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
