--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 
                         </p>
                     </div>
-                    <img class="img-fluid w-25" src="./images/Daren Cared.png" alt="image">
+                    <img class="img-fluid w-25 d-none d-sm-block" src="./images/Daren Cared.png" alt="image">
                 </div>
             </div>
         </div>
