--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
                       <div class="col-md">
                     <div class="card w-75 text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
-                            <img src="./images/BFSCHOOL.jpg" class="card-img-top w-75 mx-auto d-block mt-3" alt="image">
+                            <img src="./images/BFSCHOOL.jpg" class="card-img-top w-75 mx-auto d-block mt-3 d-none d-md-block" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title text-center"><span class="text-primary">School
                                         Website</span></h5>
