--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
                 <div class="col-md">
                     <div class="card w-75 text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
-                            <img src="./images/nexcld.jpg" class="card-img-top w-75 mx-auto d-block mt-3" alt="image">
+                            <img src="./images/nexcld.jpg" class="card-img-top w-75 mx-auto d-block mt-3 d-none d-md-block" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title text-center"><span class="text-primary">Nexcloud
                                         Website</span></h5>
@@ -111,7 +111,7 @@
                        <div class="col-md">
                     <div class="card w-75 text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
-                            <img src="./images/portfolio.jpg" class="card-img-top w-75 mx-auto d-block mt-3" alt="image">
+                            <img src="./images/portfolio.jpg" class="card-img-top w-75 mx-auto d-block mt-3 d-none d-md-block" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title text-center"><span class="text-primary">My
                                         Portfolio</span></h5>
