--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         Explore My Projects
                     </a>
                 </div>
-                <img class="img-fluid w-50 img-thumbnail width-100 height-50 d-none d-sm-block rounded-circle shadow style="width: 80px; height: 100px;"
+                <img class="img-fluid w-50 img-thumbnail width-100 height-50 d-none d-sm-block rounded-circle mb-3 style="width: 80px; height: 100px;"
                     src="./images/daren123-removebg-preview.png" alt="Image">
             </div>
         </div>
