--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
     style="background-color: whitesmoke; color: dark;">
         <div class="container text-center">
                <h3 class="text-dark text-center mb-5">My Projects</h3>
-            <div class="row text-center g-2 col-md-2 col-lg-3">
+            <div class="row text-center">
                       <div class="col">
                     <div class="card w-75 text-dark mt-5 h-60">
                         <div style="background-color: whitesmoke; color: black;">
