--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
             </div>
             <div class="d-md-flex align-items-center justify-content-between d-sm-flex pt-5">
                 <div>
-                    <p class="lead my-4"><span class="fw-bold">Let's work together! Have a project in mind<br> or just
+                    <p class="lead my-4"><span class="">Let's work together! Have a project in mind<br> or just
                             want to say hi?<br> I'd
                             love to hear from you.</span></p>
                     <a href="#" class="link-custom text-decoration-none"><span class="text-dark fw-bold"
