--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
+                        <a class="nav-link active text-white" aria-current="page"
+                            href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/about.html">About</a>
@@ -56,80 +57,74 @@
 
 
     <!-- My Projects section -->
-    <section 
-    class="vh-100 p-5"
-    style="background-color: whitesmoke; color: dark;">
-        <div class="container text-center">
-               <h3 class="text-dark text-center mb-5">My Projects</h3>
-            <div class="row text-center">
-                      <div class="col">
-                    <div class="card w-75 text-dark mt-5 h-60">
-                        <div style="background-color: whitesmoke; color: black;">
-                            <img src="./images/BFSCHOOL.jpg" class="card-img-top w-75 mx-auto d-block mt-3 d-none d-md-block" alt="image">
-                            <div class="card-body">
-                                <h5 class="card-title text-center"><span class="text-primary">School
-                                        Website</span></h5>
-                                <p class="card-text ">
-                                  I developed a school website that provides easy access to school details, announcements, 
-                                  academic resources, and contact information 
-                                </p>
-
-                                <a href="" class="btn btn-primary d-block mx-auto">
-                                    View Project
-                                </a>
-                            </div>
+    <section class="justify-content-between justify-content-center" style="background-color: whitesmoke;">
+        <div class="container pt-5">
+            <h4 class="text-center fw-bold my-5" style="color: whitesmoke;">My Services</h4>
+            <div class="row my-5">
+                <div class="col-md my-5">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/images/nexcld.jpg" class="card-img-top mx-auto d-block mt-2 p-3" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center pt-1">Business Website</h5>
+                            <p class="card-text">
+                                I designed and developed a professional website for an IT company to showcase its
+                                services, contact channels, it's location and portofolio
+                            </p>
+                            <div class="card-body d-flex justify-content-center">
+                            <a href="https://atusasiire.github.io/Nex-cloud-Business-Project/"
+                                class="btn btn-primary">View Project</a>
                         </div>
+
                     </div>
                 </div>
-               
-
-                        
+            </div>
 
 
-
-                <div class="col-md">
-                    <div class="card w-75 text-dark mt-5 h-60">
-                        <div style="background-color: whitesmoke; color: black;">
-                            <img src="./images/nexcld.jpg" class="card-img-top w-75 mx-auto d-block mt-3 d-none d-md-block" alt="image">
-                            <div class="card-body">
-                                <h5 class="card-title text-center"><span class="text-primary">Nexcloud
-                                        Website</span></h5>
-                                <p class="card-text">
-                                    I designed and developed a professional website for an IT company to
-                                    showcase its services, contact channels it's location and portfolio
-                                </p>
-
-                                <a href=" https://atusasiire.github.io/Nex-cloud-Business-Project/" class="btn btn-primary d-block mx-auto">
-                                    View Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                       <div class="col-md">
-                    <div class="card w-75 text-dark mt-5 h-60">
-                        <div style="background-color: whitesmoke; color: black;">
-                            <img src="./images/portfolio.jpg" class="card-img-top w-75 mx-auto d-block mt-3 d-none d-md-block" alt="image">
-                            <div class="card-body">
-                                <h5 class="card-title text-center"><span class="text-primary">My
-                                        Portfolio</span></h5>
-                                <p class="card-text">
-                                    I designed and developed a personal portfolio website show casing
-                                    my skills, projects i have worked on and the languages used
-                                </p>
-
-                                <a href="https://atusasiire.github.io/A.D.CARED-PORTFOLIO/" class="btn btn-primary d-block mx-auto">
-                                    View Project
-                                </a>
-                            </div>
+            <div class="col-md my-5">
+                <div class="card" style="width: 18rem;">
+                    <img src="/images/portfolio.jpg" class="card-img-top mx-auto d-block mt-2 p-3" alt="image">
+                    <div class="card-body">
+                        <h5 class="card-title text-center pt-1">Portfolio</h5>
+                        <p class="card-text">
+                            I designed and developed a responsive personal portfolio website show casing my
+                            skills, work experience, projects I
+                            have worked on and the languages I used
+                        </p>
+                        <div class="card-body d-flex justify-content-center">
+                            <a href="https://atusasiire.github.io/A.D.CARED-PORTFOLIO/" class="btn btn-primary">View
+                                Project</a>
                         </div>
                     </div>
                 </div>
             </div>
+
+
+            <div class="col-md my-5">
+                <div class="card" style="width: 18rem;">
+                    <img src="/images/BFSCHOOL.jpg" class="card-img-top mx-auto d-block mt-2 p-3" alt="image">
+                    <div class="card-body">
+                        <h5 class="card-title text-center pt-1">School Website</h5>
+                        <p class="card-text">
+                            I developed a responsive website for Bright Future Schools that provides easy access to
+                            school details by students, parents and staff.Programs, why join us, staff events,
+                            announcements,
+                            resources and contact information
+                        </p>
+                          <div class="card-body d-flex justify-content-center">
+                        <a href="#" class="btn btn-primary">View Project</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
         </div>
     </section>
+
+
+
+
+
 
 
     <!-- Footer section -->
