--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
             <div class="row my-5">
                 <div class="col-md my-5">
                     <div class="card" style="width: 18rem;">
-                        <img src="/images/nexcld.jpg" class="card-img-top mx-auto d-block mt-2 p-3" alt="...">
+                        <img src="./images/nexcld.jpg" class="card-img-top mx-auto d-block mt-2 p-3" alt="...">
                         <div class="card-body">
                             <h5 class="card-title text-center pt-1">Business Website</h5>
                             <p class="card-text">
@@ -82,7 +82,7 @@
 
             <div class="col-md my-5">
                 <div class="card" style="width: 18rem;">
-                    <img src="/images/portfolio.jpg" class="card-img-top mx-auto d-block mt-2 p-3" alt="image">
+                    <img src="./images/portfolio.jpg" class="card-img-top mx-auto d-block mt-2 p-3" alt="image">
                     <div class="card-body">
                         <h5 class="card-title text-center pt-1">Portfolio</h5>
                         <p class="card-text">
@@ -101,7 +101,7 @@
 
             <div class="col-md my-5">
                 <div class="card" style="width: 18rem;">
-                    <img src="/images/BFSCHOOL.jpg" class="card-img-top mx-auto d-block mt-2 p-3" alt="image">
+                    <img src="./images/BFSCHOOL.jpg" class="card-img-top mx-auto d-block mt-2 p-3" alt="image">
                     <div class="card-body">
                         <h5 class="card-title text-center pt-1">School Website</h5>
                         <p class="card-text">
