--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
              <div class="container text-center mt-5">
                 <h3>
                     <span class="fw-bold "
-                    style="color: whitesmoke mt-5;">
+                    style="text: whitesmoke mt-5;">
                         About Me
                     </span>
                     </h3>
