--- a/about.html
+++ b/about.html
@@ -63,9 +63,8 @@
     style="background-color: whitesmoke; color: dark;">
         <div class="-md-7 pt-1 pb-1 me-3">
              <div class="container text-center mt-5">
-                <h3>
-                    <span class="fw-bold "
-                    style="color: whitesmoke mt-5;">
+                <h3 style="color: whitesmoke ;">
+                    <span class="fw-bold mt-5">
                         About Me
                     </span>
                     </h3>
