--- a/Resume.html
+++ b/Resume.html
@@ -36,7 +36,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 ms-5 ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
+                        <a class="nav-link active text-white" aria-current="page"
+                            href="/A.D.CARED-PORTFOLIO/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/about.html">About</a>
@@ -64,15 +65,13 @@
 
 
     <div class="card mt-5 text-light" style="max-width: 100;">
-        <div class="card-header mt-5 pt-5 text-center"
-         style="background-color: whitesmoke; color: dark;">
+        <div class="card-header mt-5 pt-5 text-center" style="background-color: whitesmoke; color: dark;">
             <h5 class="text-dark fw-bold">ATUSASIIRE DAREN CARED</h5>
             <h6 class="text-dark fw-bold">Junior Web Developer</h6>
             <p class="text-dark fw-bold">Mobile: 0770987258</p>
             <p class="text-dark  fw-bold">E-mail: atusasiiredarencared58@gmail.com</p>
         </div>
-        <div class="card-body text-dark ps-5"
-        style="background-color: whitesmoke;">
+        <div class="card-body text-dark ps-5" style="background-color: whitesmoke;">
             <h5 class="text-dark text-decoration-underline">Personal profile</h5>
             <ul>
                 <li>I'm a self-motivated, flexible, friendly and competent person, who is more dedicated to work in all
@@ -111,11 +110,11 @@
                     <li>2025 : Ongoing certificate in Web development Women in Technology Uganda</li>
                 </ul>
         </div>
-        <div class="card-footer text-dark border-success ps-5"
-        style="background-color: whitesmoke;">
+        <div class="card-footer text-dark border-success ps-5" style="background-color: whitesmoke;">
 
             <h5 class="text-dark text-decoration-underline">
-            <b>Referees</b></h5>
+                <b>Referees</b>
+            </h5>
             <p><b>1.</b>Mr Nuwagira Alexander</p>
             <ul>
                 <li>Head of IT Leading Innovations Ltd</li>
@@ -131,9 +130,10 @@
                 <li>Tel: 0774322138</li>
             </ul>
 
-            <a href="resume/resume.html" class="btn btn-primary btn-lg">
-                <i class="bi bi-download"></i> Download as Pdf
+            <a href="resume/resume.pdf" class="btn btn-primary btn-lg" download="Atusasiire_Resume.pdf">
+                <i class="bi bi-download"></i> Download as PDF
             </a>
+
 
         </div>
     </div>
