--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
     <!-- My Projects section -->
     <section class="justify-content-between justify-content-center" style="background-color: whitesmoke;">
         <div class="container pt-5">
-           
+            <h4 class="text-center fw-bold my-5" style="color: whitesmoke;">My Services</h4>
             <div class="row my-5">
                 <div class="col-md my-5">
                     <div class="card" style="width: 18rem;">
