--- a/Resume.html
+++ b/Resume.html
@@ -130,7 +130,7 @@
                 <li>Tel: 0774322138</li>
             </ul>
 
-            <a href="resume/resume.pdf" class="btn btn-primary btn-lg" download="Atusasiire_Resume.pdf">
+            <a href="resume/resume.html" class="btn btn-primary btn-lg" download="Atusasiire_Resume.pdf">
                 <i class="bi bi-download"></i> Download as PDF
             </a>
 
