--- a/Resume.html
+++ b/Resume.html
@@ -131,7 +131,7 @@
             </ul>
             </div>
 
-          <a href="#" class="btn btn-primary btn-lg" onclick="downloadResume()">
+          <a href="#" class="btn btn-primary btn-sm" onclick="downloadResume()">
   <i class="bi bi-download"></i> Download as PDF
 </a>
 
