--- a/Resume.html
+++ b/Resume.html
@@ -131,7 +131,7 @@
             </ul>
             </div>
 
-          <a href="#" class="btn btn-primary btn-sm" style="width: 60px;" onclick="downloadResume()">
+          <a href="#" class="btn btn-primary btn-sm" style="width: 60px; align-items: center;" onclick="downloadResume()">
   <i class="bi bi-download"></i> Download as PDF
 </a>
 
