--- a/Resume.html
+++ b/Resume.html
@@ -63,78 +63,82 @@
     </nav>
 
 
-<div id="resume-content">
-    <div class="card mt-5 text-light" style="max-width: 100;">
-        <div class="card-header mt-5 pt-5 text-center" style="background-color: whitesmoke; color: dark;">
-            <h5 class="text-dark fw-bold">ATUSASIIRE DAREN CARED</h5>
-            <h6 class="text-dark fw-bold">Junior Web Developer</h6>
-            <p class="text-dark fw-bold">Mobile: 0770987258</p>
-            <p class="text-dark  fw-bold">E-mail: atusasiiredarencared58@gmail.com</p>
-        </div>
-        <div class="card-body text-dark ps-5" style="background-color: whitesmoke;">
-            <h5 class="text-dark text-decoration-underline">Personal profile</h5>
-            <ul>
-                <li>I'm a self-motivated, flexible, friendly and competent person, who is more dedicated to work in all
-                    favourable
-                    conditions,<br>and I can get in contact with people in any situations, willing to
-                    learn new ideas as well as taking new challenges.</li>
-            </ul>
-
-            <h5 class="text-dark text-decoration-underline"><b>Professional Summary</b></h5>
-            <ul>
-                <li>I recently graduated in computer science with hands on experience in web development.</li>
-                <li> I am skilled in CSS, HTML and Microsoft office tools. I’m highly motivated to start a career in
-                    tech</li>
-                or web development.
-            </ul>
-
-
-            <h5 class="text-dark text-decoration-underline"><b>Skills</b></h5>
-            <ul>
-                <li>Programming languages: html, css and bootstrap, Microsoft Word, Excel and PowerPoint, Canva.
-                    Communication skills, <br>critical thinking, time management, adaptability, eagerness to learn, team
-                    work, and leadership.</li>
-            </ul>
-
-            <h5 class="text-dark p-1 text-decoration-underline"><b>Work Experience</b></h5>
-            <ul>
-                <li>2025: Women in Technology Uganda (WITU) doing a short course in web development using CSS, HTML,
-                    Bootstrap.
-                <li>2024: Stratcom Communications and Computer Solutions for Internship</li>
-                <li>2023: Supercom Technologies for Internship</li>
-
-
-                <h5 class="text-dark text-decoration-underline"><b>Education</b></h5>
+    <div id="resume-content">
+        <div class="card mt-5 text-light" style="max-width: 100;">
+            <div class="card-header mt-5 pt-5 text-center" style="background-color: whitesmoke; color: dark;">
+                <h5 class="text-dark fw-bold">ATUSASIIRE DAREN CARED</h5>
+                <h6 class="text-dark fw-bold">Junior Web Developer</h6>
+                <p class="text-dark fw-bold">Mobile: 0770987258</p>
+                <p class="text-dark  fw-bold">E-mail: atusasiiredarencared58@gmail.com</p>
+            </div>
+            <div class="card-body text-dark ps-5" style="background-color: whitesmoke;">
+                <h5 class="text-dark text-decoration-underline">Personal profile</h5>
                 <ul>
-                    <li>2023-2025: Diploma in Computer Science YMCA Comprehensive Institute Wandegeya</li>
-                    <li>2025 : Ongoing certificate in Web development Women in Technology Uganda</li>
+                    <li>I'm a self-motivated, flexible, friendly and competent person, who is more dedicated to work in
+                        all
+                        favourable
+                        conditions,<br>and I can get in contact with people in any situations, willing to
+                        learn new ideas as well as taking new challenges.</li>
                 </ul>
-        </div>
-        <div class="card-footer text-dark border-success ps-5" style="background-color: whitesmoke;">
 
-            <h5 class="text-dark text-decoration-underline">
-                <b>Referees</b>
-            </h5>
-            <p><b>1.</b>Mr Nuwagira Alexander</p>
-            <ul>
-                <li>Head of IT Leading Innovations Ltd</li>
-                <li>Address: Mabirizi Complex, Kampala-Uganda</li>
-                <li>Tel: 0704713334</li>
-                <li>E-mail: nwgralexander1@gmail.com</li>
-            </ul>
+                <h5 class="text-dark text-decoration-underline"><b>Professional Summary</b></h5>
+                <ul>
+                    <li>I recently graduated in computer science with hands on experience in web development.</li>
+                    <li> I am skilled in CSS, HTML and Microsoft office tools. I’m highly motivated to start a career in
+                        tech</li>
+                    or web development.
+                </ul>
 
-            <p><b>2.</b>Mr Kituno Festo</p>
-            <ul>
-                <li>Head of department</li>
-                <li>YMCA (Computer Science)</li>
-                <li>Tel: 0774322138</li>
-            </ul>
+
+                <h5 class="text-dark text-decoration-underline"><b>Skills</b></h5>
+                <ul>
+                    <li>Programming languages: html, css and bootstrap, Microsoft Word, Excel and PowerPoint, Canva.
+                        Communication skills, <br>critical thinking, time management, adaptability, eagerness to learn,
+                        team
+                        work, and leadership.</li>
+                </ul>
+
+                <h5 class="text-dark p-1 text-decoration-underline"><b>Work Experience</b></h5>
+                <ul>
+                    <li>2025: Women in Technology Uganda (WITU) doing a short course in web development using CSS, HTML,
+                        Bootstrap.
+                    <li>2024: Stratcom Communications and Computer Solutions for Internship</li>
+                    <li>2023: Supercom Technologies for Internship</li>
+
+
+                    <h5 class="text-dark text-decoration-underline"><b>Education</b></h5>
+                    <ul>
+                        <li>2023-2025: Diploma in Computer Science YMCA Comprehensive Institute Wandegeya</li>
+                        <li>2025 : Ongoing certificate in Web development Women in Technology Uganda</li>
+                    </ul>
+            </div>
+            <div class="card-footer text-dark border-success ps-5" style="background-color: whitesmoke;">
+
+                <h5 class="text-dark text-decoration-underline">
+                    <b>Referees</b>
+                </h5>
+                <p><b>1.</b>Mr Nuwagira Alexander</p>
+                <ul>
+                    <li>Head of IT Leading Innovations Ltd</li>
+                    <li>Address: Mabirizi Complex, Kampala-Uganda</li>
+                    <li>Tel: 0704713334</li>
+                    <li>E-mail: nwgralexander1@gmail.com</li>
+                </ul>
+
+                <p><b>2.</b>Mr Kituno Festo</p>
+                <ul>
+                    <li>Head of department</li>
+                    <li>YMCA (Computer Science)</li>
+                    <li>Tel: 0774322138</li>
+                </ul>
             </div>
 
-          <a href="#" class="btn btn-primary btn-sm" style="width: 140px; align-items: center;" onclick="downloadResume()">
-  <i class="bi bi-download"></i> Download as PDF
-</a>
-
+            <div class="d-flex justify-content-center mt-3">
+                <a href="#" class="btn btn-primary btn-sm" style="width: 140px; align-items: center;"
+                    onclick="downloadResume()">
+                    <i class="bi bi-download"></i> Download as PDF
+                </a>
+            </div>
 
 
 
@@ -242,22 +246,22 @@
     </div>
 
 
-<script>
-  function downloadResume() {
-    const element = document.getElementById('resume-content'); 
-    const options = {
-      margin:       0.5,
-      filename:     'Atusasiire_Resume.pdf',
-      image:        { type: 'jpeg', quality: 0.98 },
-      html2canvas:  { scale: 2 },
-      jsPDF:        { unit: 'in', format: 'a4', orientation: 'portrait' }
-    };
+    <script>
+        function downloadResume() {
+            const element = document.getElementById('resume-content');
+            const options = {
+                margin: 0.5,
+                filename: 'Atusasiire_Resume.pdf',
+                image: { type: 'jpeg', quality: 0.98 },
+                html2canvas: { scale: 2 },
+                jsPDF: { unit: 'in', format: 'a4', orientation: 'portrait' }
+            };
 
-    html2pdf().set(options).from(element).save();
-  }
-</script>
+            html2pdf().set(options).from(element).save();
+        }
+    </script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
