--- a/Resume.html
+++ b/Resume.html
@@ -134,7 +134,7 @@
             </div>
 
             <div class="d-flex justify-content-center mt-3">
-                <a href="#" class="btn btn-primary btn-sm" style="width: 140px; align-items: center;"
+                <a href="#" class="btn btn-primary btn-sm" style="width: 140px; align-items: center; background-color: whitesmoke;"
                     onclick="downloadResume()">
                     <i class="bi bi-download"></i> Download as PDF
                 </a>
